--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.2",
-    "bcrypt": "^4.0.1",
+    "bcrypt": "^5.1.1",
+    "env": "^0.0.2",
     "express": "^4.17.2",
     "graphql": "^16.6.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
   }
 }
