--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.14",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.6",
+    "@mui/system": "^5.15.6",
     "graphql": "^16.6.0",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "styled": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
